# oscillo

./: CMakeLists.txt  README.md
board/: CMakeLists.txt
cmake/: .uncrustify  ArduinoToolchain.cmake  common.cmake  uncrustify.cmake
gui/: CMakeLists.txt
gui/res/: resources.qrc
gui/res/views/: main.qml
gui/src/: main.cxx
